--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ SECURITY__JWT_SECRET_KEY=DVnFmhwvjEhJZpuhndxjhlezxQPJmBIIkMDEmFREWQADPcUnrG
 SECURITY__BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8001"]
 SECURITY__ALLOWED_HOSTS=["localhost", "127.0.0.1"]
 
-DATABASE__HOSTNAME=localhost
-DATABASE__USERNAME=rDGJeEDqAz
-DATABASE__PASSWORD=XsPQhCoEfOQZueDjsILetLDUvbvSxAMnrVtgVZpmdcSssUgbvs
-DATABASE__PORT=5155
-DATABASE__DB=default_db
+DB_SETTINGS__HOSTNAME=localhost
+DB_SETTINGS__USERNAME=postgres_user
+DB_SETTINGS__PASSWORD=postgres_password
+DB_SETTINGS__PORT=5155
+DB_SETTINGS__DB=default_db
+
