--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,8 @@ gevent = "^24.2.1"
 httpx = "^0.27.0"
 mypy = "^1.10.1"
 pre-commit = "^3.7.1"
-pytest = "^8.2.2"
-# do not bump pytest-asyncio until https://github.com/pytest-dev/pytest-asyncio/issues/706 resolved
-pytest-asyncio = "0.21.2"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 pytest-cov = "^5.0.0"
 pytest-xdist = "^3.6.1"
 ruff = "^0.5.0"
@@ -40,6 +39,7 @@ requires = ["poetry-core>=1.0.0"]
 [tool.pytest.ini_options]
 addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=90"
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
 testpaths = ["app/tests"]
 
 [tool.coverage.run]
